--- a/zegar/zegar.css
+++ b/zegar/zegar.css
@@ -1,5 +1,32 @@
 body{
+    margin-top:30vh;
     font-size: 30px;
+}
+
+.teraz{
+    border-radius: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    width: 500px;
+    padding: 1px;
+}
+.wakacje{
+    padding: 1px;
+    border-radius: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    width: 650px;
+}
+
+
+.wak_text1,.wak_text2,#czas,#teraz{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-family: monospace;
 }
 
 
