--- a/assets/style.css
+++ b/assets/style.css
@@ -1,37 +1,57 @@
-body, html {
-    
-    
-    width: 100%;
-    height: 100%;
+*{
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-canvas {
-    position: absolute;
-    top:0;
-    left:0
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background-image: url('./bg1.webp');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.informacje{
-    
-    position: absolute;
-    z-index: 1;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: 40% ;
+
+.card{
+    width: 90%;
+    max-width: 440px;
+    color: #fff;
     text-align: center;
-    color: aliceblue;
+    padding: 50px 35px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
 }
-.footer{
-    
-    position: absolute;
-    z-index: 2;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: 97% ;
-    text-align: center;
+.card h1{
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 20px;
+
+}
+
+.card h2{
+    font-size: 18px;
+    margin: 10px auto;
+    max-width: 330px;
+}
+.card h3{
+    font-size: 16px;
+    margin: 10px auto;
+    max-width: 330px;
+}
+.card .links img{
+    width: 40px;
+    border-radius: 50%;
+    margin: 10px 5px;
+    transition: background 0.5s;
+}
+
+.card .links img:hover{
+    background: #ffffff62;
 }
